--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<from action="/action.php">
+	<from form action="/action_page.php" method="get">
 		<div>
 			<label for="name">Name</label>
 			<input type="text" name="text" placeholder="Name" required>
