--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		</div>
 		<br>
 		<div>
-			<label for="gender" > 
+			<label for="gender" > Gender :<br>
 				<input type="radio" value="male" name="Gender"  required id="id1">Male<br>
 				<input type="radio" value="Female" name="Gender" required id="id1">Female
 			</label>
