--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 <!--     <script type="text/javascript" src="./script.js">
 </script>
-	<from form action="/action_page.php" method="get">
+	<form action="/action_page.php" method="get">
 		<div>
 			<label for="name">Name</label>
 			<input type="text" name="text" placeholder="Name" required>
@@ -66,10 +66,10 @@
 		<div>
 			<input type="submit" value="submit">
 		</div>
-	</from>
+	</form>
  -->
 	<h1> Signup Form Car </h1>
-     <form action="/action.php">
+     <form action="/action.php" method="get">
         <div>
             <label for="Name"> Name : </label>
                 <input type="text" placeholder="Name" required>
