--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form   method="post">
+	<form  action="/file.php" method="post">
         <div>
             <label for="name"> Name* </label>
                 <input type="text" placeholder="Name" required id="name">
