--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         <div>
 <!--             <label for="gender"> </label> -->
 			
-		 Gender*<label for="gender_m">Male </label>
+		 Gender*<label for="gender_m"> Male </label>
             <input type="radio"  required  name="Gender"id="gender_m">
             <label for="gender_f">Female </label>
 			<input type="radio"  required  name="Gender"id="gender_f">
@@ -34,8 +34,8 @@
         <div>
             <label for ="cars">Car Brands* </label>
               <select for="Cars" required id="cars"> 
-              <option  disabled>--Please choose an option--</option>
-              <option value="bmw" >BMW</option>
+              <option >--Please choose an option--</option>
+			 <option value="bmw" >BMW</option>
               <option value="audi">Audi</option>
               <option  value="mercedez">Mercedez</option>
             </select>
