--- a/main.html
+++ b/main.html
@@ -23,22 +23,23 @@
         <br>
         <div>
 <!--             <label for="gender"> </label> -->
-			
-		 Gender*<label for="gender_m"> Male </label>
+		 <label for="gender">Gender* </label>
             <input type="radio"  required  name="Gender"id="gender_m">
-            <label for="gender_f">Female </label>
-			<input type="radio"  required  name="Gender"id="gender_f">
+            <label for="gender_m">Male </label>
+            <input type="radio"  required  name="Gender"id="gender_f">
+              <label for="gender_f">Female </label>
             
         </div>
         <br>
         <div>
             <label for ="cars">Car Brands* </label>
               <select for="Cars" required id="cars"> 
-              <option >--Please choose an option--</option>
-			 <option value="bmw" >BMW</option>
+              <option  disabled value="">--Please choose an option--</option>
+              <option value="bmw" >BMW</option>
               <option value="audi">Audi</option>
               <option  value="mercedez">Mercedez</option>
-            </select>
+            </select>	
+		 
         </div>
          <br>
          <div>
