--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
         </div>
         <br>
         <div>
-<!--             <label for="gender"> </label> -->
-<!-- 		 <label for="gender">Gender* </label> -->
-			Gender*  <label for="gender_m">Male </label>
+
+		 <label for="Gender">Gender* </label>
+		   <label for="gender_m">Male </label>
             <input type="radio"  required  name="Gender"id="gender_m">
              <label for="gender_f">Female </label>
             <input type="radio"  required  name="Gender"id="gender_f">
